# SLAE111

./: CMakeLists.txt  main.cpp
KR34/: 4.txt  main.cpp
Src/: CMakeLists.txt
Src/CSR/: csrmatrix.cpp  csrmatrix.h
Src/HouseHolder/: househ.cpp  househ.h
Src/Tridiagonal_matrix/: tridiagonal.cpp  tridiagonal.h
Src/solvers/: solve_tridiagonal.hpp
Tridiagonal_matrix/: tridiagonal.cpp  tridiagonal.h
solvers/: solve_tridiagonal.hpp
tests/: CMakeLists.txt  test_QR.cpp  test_test.cpp
